--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <style>
-
-    </style>
+    <head>
+        <style>
+            body {
+                background-color: rgb(107, 107, 107);
+            }
+        </style>
+    </head>
+    
     <body>
         <h1 style="position: center;">ECTS Tracker</h1>
         <table>
