--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
     <body>
         <h1 style="position: center;">ECTS Tracker</h1>
         <table>
-            <td>]
+            <tr>
                 <th>Algebra</th>
-                <tr>Percentage</tr>
-            </td>
-            <td>
+                <td>Percentage</td>
+            </tr>
+            <tr>
                 <th>Calculus I</th>
-                <tr>Percentage</tr>
-            </td>
+                <td>Percentage</td>
+            </tr>
         </table>
         
     </body>
