--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,17 @@
         <table>
             <tr>
                 <th>Algebra</th>
+                <th>Calculus I</td>
+                <th>Graph Expr</th>
+            </tr>
+            <tr>
+                <td>Percentage</td>
+                <td>Percentage</td>
                 <td>Percentage</td>
             </tr>
             <tr>
-                <th>Calculus I</th>
-                <td>Percentage</td>
+                <th>Algebra</th>
+                <th>Calculus I</td>                
             </tr>
         </table>
         
